// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with active tab 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_q_-tabpanel-0"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_q_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="_r_q_-tabpanel-1"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_q_-tab-1"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_q_-tab-0"
      class="py-3"
      hidden=""
      id="_r_q_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="_r_q_-tab-1"
      class="py-3"
      id="_r_q_-tabpanel-1"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 2-1"
        id="tab-panel-1"
        role="tabpanel"
      >
        Content 2
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with active tab content only 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_1c_-tabpanel-0"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_1c_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="_r_1c_-tabpanel-1"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_1c_-tab-1"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-controls="_r_1c_-tabpanel-2"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_1c_-tab-2"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_1c_-tab-0"
      class="py-3"
      hidden=""
      id="_r_1c_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="_r_1c_-tab-1"
      class="py-3"
      id="_r_1c_-tabpanel-1"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 2-1"
        id="tab-panel-1"
        role="tabpanel"
      >
        Content 2
      </div>
    </div>
    <div
      aria-labelledby="_r_1c_-tab-2"
      class="py-3"
      hidden=""
      id="_r_1c_-tabpanel-2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with all props combined 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Combined tabs"
    class="flex w-full text-center flex-wrap space-x-2 text-sm font-medium text-gray-500 dark:text-gray-400"
    role="tablist"
  >
    <button
      aria-controls="_r_1b_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-lg bg-cyan-600 text-white"
      id="_r_1b_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      <div
        data-testid="mock-icon"
      >
        Icon
      </div>
      Tab 1
    </button>
    <button
      aria-controls="_r_1b_-tabpanel-1"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark"
      disabled=""
      id="_r_1b_-tab-1"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-controls="_r_1b_-tabpanel-2"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-lg hover:bg-gray-100 hover:text-gray-900 dark:hover:bg-gray-800 dark:hover:text-white"
      id="_r_1b_-tab-2"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 3
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_1b_-tab-0"
      class="py-3"
      id="_r_1b_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Content 1
      </div>
    </div>
    <div
      aria-labelledby="_r_1b_-tab-1"
      class="py-3"
      hidden=""
      id="_r_1b_-tabpanel-1"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="_r_1b_-tab-2"
      class="py-3"
      hidden=""
      id="_r_1b_-tabpanel-2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with array content 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_18_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_18_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_18_-tab-0"
      class="py-3"
      id="_r_18_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Item 1
        Item 2
        Item 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with boolean content 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_16_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_16_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_16_-tab-0"
      class="py-3"
      id="_r_16_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with complex content 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_u_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_u_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_u_-tab-0"
      class="py-3"
      id="_r_u_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        <div>
          <h3>
            Complex Content
          </h3>
          <p>
            This is complex JSX content
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with content when not loading 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_1e_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_1e_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_1e_-tab-0"
      class="py-3"
      id="_r_1e_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-busy="false"
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Content 1
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with custom aria-label 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Custom tabs"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_p_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_p_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_p_-tab-0"
      class="py-3"
      id="_r_p_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Content 1
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with custom variant 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center -mb-px flex-wrap border-b border-surface-primary dark:surface-primary-dark"
    role="tablist"
  >
    <button
      aria-controls="_r_o_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark font-bold relative after:absolute after:bottom-[-2px] after:left-1/4 after:w-1/2 after:border-b-2 after:border-brand-primary text-brand-primary"
      id="_r_o_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_o_-tab-0"
      class="py-3"
      id="_r_o_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Content 1
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with default props 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_n_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_n_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="_r_n_-tabpanel-1"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_n_-tab-1"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_n_-tab-0"
      class="py-3"
      id="_r_n_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Content 1
      </div>
    </div>
    <div
      aria-labelledby="_r_n_-tab-1"
      class="py-3"
      hidden=""
      id="_r_n_-tabpanel-1"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with disabled tab 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_r_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_r_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="_r_r_-tabpanel-1"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg"
      disabled=""
      id="_r_r_-tab-1"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_r_-tab-0"
      class="py-3"
      id="_r_r_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Content 1
      </div>
    </div>
    <div
      aria-labelledby="_r_r_-tab-1"
      class="py-3"
      hidden=""
      id="_r_r_-tabpanel-1"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with empty items array 1`] = `null`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with empty string titles 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_13_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_13_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    />
    <button
      aria-controls="_r_13_-tabpanel-1"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_13_-tab-1"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_13_-tab-0"
      class="py-3"
      id="_r_13_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab--0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Content 1
      </div>
    </div>
    <div
      aria-labelledby="_r_13_-tab-1"
      class="py-3"
      hidden=""
      id="_r_13_-tabpanel-1"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with icon 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_s_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_s_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      <div
        data-testid="mock-icon"
      >
        Icon
      </div>
      Tab 1
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_s_-tab-0"
      class="py-3"
      id="_r_s_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Content 1
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with loading placeholder when loading 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_1d_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_1d_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_1d_-tab-0"
      class="py-3"
      id="_r_1d_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-busy="true"
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Loading content...
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with loading state 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_t_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_t_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_t_-tab-0"
      class="py-3"
      id="_r_t_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-busy="true"
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Loading...
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with long titles 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_12_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_12_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      This is a very long tab title that should be rendered correctly within the tabs component
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_12_-tab-0"
      class="py-3"
      id="_r_12_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-This is a very long tab title that should be rendered correctly within the tabs component-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Content 1
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with many items 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_10_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_10_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="_r_10_-tabpanel-1"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_10_-tab-1"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-controls="_r_10_-tabpanel-2"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_10_-tab-2"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 3
    </button>
    <button
      aria-controls="_r_10_-tabpanel-3"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_10_-tab-3"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 4
    </button>
    <button
      aria-controls="_r_10_-tabpanel-4"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_10_-tab-4"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 5
    </button>
    <button
      aria-controls="_r_10_-tabpanel-5"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_10_-tab-5"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 6
    </button>
    <button
      aria-controls="_r_10_-tabpanel-6"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_10_-tab-6"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 7
    </button>
    <button
      aria-controls="_r_10_-tabpanel-7"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_10_-tab-7"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 8
    </button>
    <button
      aria-controls="_r_10_-tabpanel-8"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_10_-tab-8"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 9
    </button>
    <button
      aria-controls="_r_10_-tabpanel-9"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_10_-tab-9"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 10
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_10_-tab-0"
      class="py-3"
      id="_r_10_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Content 1
      </div>
    </div>
    <div
      aria-labelledby="_r_10_-tab-1"
      class="py-3"
      hidden=""
      id="_r_10_-tabpanel-1"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="_r_10_-tab-2"
      class="py-3"
      hidden=""
      id="_r_10_-tabpanel-2"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="_r_10_-tab-3"
      class="py-3"
      hidden=""
      id="_r_10_-tabpanel-3"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="_r_10_-tab-4"
      class="py-3"
      hidden=""
      id="_r_10_-tabpanel-4"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="_r_10_-tab-5"
      class="py-3"
      hidden=""
      id="_r_10_-tabpanel-5"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="_r_10_-tab-6"
      class="py-3"
      hidden=""
      id="_r_10_-tabpanel-6"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="_r_10_-tab-7"
      class="py-3"
      hidden=""
      id="_r_10_-tabpanel-7"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="_r_10_-tab-8"
      class="py-3"
      hidden=""
      id="_r_10_-tabpanel-8"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="_r_10_-tab-9"
      class="py-3"
      hidden=""
      id="_r_10_-tabpanel-9"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with mixed content types 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_19_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_19_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="_r_19_-tabpanel-1"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_19_-tab-1"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
    <button
      aria-controls="_r_19_-tabpanel-2"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_19_-tab-2"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 3
    </button>
    <button
      aria-controls="_r_19_-tabpanel-3"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_19_-tab-3"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 4
    </button>
    <button
      aria-controls="_r_19_-tabpanel-4"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_19_-tab-4"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 5
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_19_-tab-0"
      class="py-3"
      id="_r_19_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Text content
      </div>
    </div>
    <div
      aria-labelledby="_r_19_-tab-1"
      class="py-3"
      hidden=""
      id="_r_19_-tabpanel-1"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="_r_19_-tab-2"
      class="py-3"
      hidden=""
      id="_r_19_-tabpanel-2"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="_r_19_-tab-3"
      class="py-3"
      hidden=""
      id="_r_19_-tabpanel-3"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="_r_19_-tab-4"
      class="py-3"
      hidden=""
      id="_r_19_-tabpanel-4"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with null content 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_14_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_14_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_14_-tab-0"
      class="py-3"
      id="_r_14_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with null items 1`] = `null`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with number content 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_17_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_17_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_17_-tab-0"
      class="py-3"
      id="_r_17_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        42
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with onActiveTabChange handler 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_1a_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_1a_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="_r_1a_-tabpanel-1"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_1a_-tab-1"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_1a_-tab-0"
      class="py-3"
      id="_r_1a_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Content 1
      </div>
    </div>
    <div
      aria-labelledby="_r_1a_-tab-1"
      class="py-3"
      hidden=""
      id="_r_1a_-tabpanel-1"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with single item 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_v_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_v_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Single Tab
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_v_-tab-0"
      class="py-3"
      id="_r_v_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Single Tab-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Single Content
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with special characters in titles 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_11_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_11_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Special & Characters: &lt;&gt;&"'\`
    </button>
    <button
      aria-controls="_r_11_-tabpanel-1"
      aria-selected="false"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg text-gray-500 hover:bg-gray-50 hover:text-gray-600 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-gray-300"
      id="_r_11_-tab-1"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Unicode: éàçüö 你好世界
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_11_-tab-0"
      class="py-3"
      id="_r_11_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Special & Characters: <>&"'\`-0"
        id="tab-panel-0"
        role="tabpanel"
      >
        Content 1
      </div>
    </div>
    <div
      aria-labelledby="_r_11_-tab-1"
      class="py-3"
      hidden=""
      id="_r_11_-tabpanel-1"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with undefined content 1`] = `
<div
  class="flex flex-col gap-2"
>
  <div
    aria-label="Tabs navigation"
    class="flex w-full text-center flex-wrap border-b border-gray-200 dark:border-gray-700"
    role="tablist"
  >
    <button
      aria-controls="_r_15_-tabpanel-0"
      aria-selected="true"
      class="flex flex-1 items-center justify-center text-sm p-4 font-medium first:ml-0 focus:outline-none disabled:cursor-not-allowed disabled:text-tertiary disabled:dark:text-tertiary-dark rounded-t-lg bg-gray-100 text-cyan-600 dark:bg-gray-800 dark:text-cyan-500"
      id="_r_15_-tab-0"
      role="tab"
      style="z-index: 1;"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-labelledby="_r_15_-tab-0"
      class="py-3"
      id="_r_15_-tabpanel-0"
      role="tabpanel"
      tabindex="0"
    >
      <div
        aria-labelledby="tab-Tab 1-0"
        id="tab-panel-0"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`Tabs > Snapshot Tests > matches snapshot for tabs with undefined items 1`] = `null`;
